// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is false 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "Sign in",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is true 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "Sign in",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "attributes": Object {
            "autocomplete": "off",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should set appropriate autocomplete attribute on elements when disableAutocomplete feature is undefined 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "Sign in",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "attributes": Object {
            "autocomplete": "new-password",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`overwriteAutocomplete Tests should update all elements in array with appropriate autocomplete value when  disableAutocomplete feature is true 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "Sign in",
        },
        "type": "Title",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "identifier",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "attributes": Object {
            "autocomplete": "off",
          },
          "inputMeta": Object {
            "name": "credentials.passcode",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "type": "submit",
        },
        "type": "Button",
      },
      Object {
        "options": Object {
          "label": "Forgot Password",
        },
        "type": "Link",
      },
      Object {
        "options": Object {
          "attributes": Object {
            "autocomplete": "off",
          },
          "inputMeta": Object {
            "name": "confirmPassword",
          },
        },
        "type": "Field",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
